analysis/low-level-api-fir/testData/getOrBuildFir/invalidCode/callableReferenceWithArgument.kt
val lam = { "lam" }

fun foo() {
    ::lam(<expr>fun() {}</expr>)
}